# eos

libraries/chain/include/eosio/chain/: authorization_manager.hpp
plugins/: CMakeLists.txt
plugins/chain_plugin/: chain_plugin.cpp
plugins/chain_plugin/include/eosio/chain_plugin/: chain_plugin.hpp
plugins/permission_plugin/: CMakeLists.txt  README.md  permission_plugin.cpp
plugins/permission_plugin/include/eosio/permission_plugin/: permission_plugin.hpp
programs/cleos/: CMakeLists.txt  httpc.hpp  main.cpp
programs/nodeos/: CMakeLists.txt
